<?xml version="1.0"?>
<package format="2">
  <name>wro_gazebo</name>
  <version>1.0</version>
  <description>The WRO 2019 gazebo ROS package</description>

  <maintainer email="ayushgup@iitk.ac.in">Ayush Gupta</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
